# demo-repository

./: .gitignore  README.md  langgraph_pipeline.py  main.py  pyproject.toml  requirements.txt  test_integration_steps.py  unclassified_drug_raw_items.txt
.github/workflows/: auto-assign.yml
DECISION_data/: enriched_키즈플랜 비오클.json  enriched_키즈픽션.json
IMG2TEXT_data/: result_all.json
TEXT2SEARCH_data/: enriched_키즈플랜 비오클.json  enriched_키즈픽션.json
chroma_db/: chroma.sqlite3
core/: 2.web_search.py  4.answer_user.py  __init__.py  answer_user_5.py  claim_check_3.py  claim_check_4.py  config.py  cromadb_indexing_0.py  data_validator_agent_5.py  intent_refiner_agent_2.py  prompt.py  rag_service_3_1.py  rag_service_4_1.py  state_types.py  text_extract_1.py  utils.py  web_search_2.py  web_search_3.py
csv_data/: fnclty_materials_complete.csv  healthfood_claims_final10.csv
data_analysis/: data_analysis.py
graphvenv/: pyvenv.cfg
graphvenv/Scripts/: activate  activate.bat
gui/: gui_test.py
streamlit/: streamlit_app.py
test/: test1.py  test_embed.py  test_healthfood_emb.py  test_integration_steps.py  test_vectorDB.py  test_vector_data.py
utils/: decorators.py
